fuente/GjsonParser.java
// Generated from .\fuente\GjsonParser.g4 by ANTLR 4.7.1

	package fuente;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GjsonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TIPO_GRAFO=1, IDENTIFICADOR=2, NAME=3, GENDER=4, NUMBER=5, WORDTYPE=6, 
		TYPEOF=7, ISLIST=8, OPTIONAL=9, MULTIPLICITYMAX=10, MULTIPLICITYMIN=11, 
		REVERSENAME=12, FROM=13, TO=14, INHERITS=15, PROPERTIES=16, USEDBY=17, 
		LANGUAGEDATA=18, LABEL=19, REVERSELABEL=20, IDIOMA=21, CONTEXT=22, ABRE_LLAVE=23, 
		CIERRA_LLAVE=24, ABRE_CORCHETE=25, CIERRA_CORCHETE=26, COMA=27, DOSPUNTOS=28, 
		BOOLEAN=29, CADENA=30, WS=31, INTRO=32, CIERRA_CONTEXTO=33, INFO_CONTEXT=34;
	public static final int
		RULE_archivo = 0, RULE_context = 1, RULE_grafo = 2, RULE_cuerpo_grafo = 3, 
		RULE_objeto = 4, RULE_lista = 5, RULE_identificador = 6, RULE_atributo = 7, 
		RULE_name = 8, RULE_reversename = 9, RULE_label = 10, RULE_reverselabel = 11, 
		RULE_gender = 12, RULE_number = 13, RULE_wordtype = 14, RULE_typeof = 15, 
		RULE_islist = 16, RULE_multiplicitymax = 17, RULE_multiplicitymin = 18, 
		RULE_usedby = 19, RULE_languagedata = 20, RULE_from = 21, RULE_to = 22, 
		RULE_inherits = 23, RULE_properties = 24, RULE_optional = 25, RULE_revidioma = 26, 
		RULE_idioma = 27, RULE_cadenaProperty = 28, RULE_cadenaUsedBy = 29, RULE_tipo_grafo = 30, 
		RULE_nombre_grafo = 31;
	public static final String[] ruleNames = {
		"archivo", "context", "grafo", "cuerpo_grafo", "objeto", "lista", "identificador", 
		"atributo", "name", "reversename", "label", "reverselabel", "gender", 
		"number", "wordtype", "typeof", "islist", "multiplicitymax", "multiplicitymin", 
		"usedby", "languagedata", "from", "to", "inherits", "properties", "optional", 
		"revidioma", "idioma", "cadenaProperty", "cadenaUsedBy", "tipo_grafo", 
		"nombre_grafo"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'\"@context\"'", 
		"'{'", "'}'", "'['", "']'", "','", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TIPO_GRAFO", "IDENTIFICADOR", "NAME", "GENDER", "NUMBER", "WORDTYPE", 
		"TYPEOF", "ISLIST", "OPTIONAL", "MULTIPLICITYMAX", "MULTIPLICITYMIN", 
		"REVERSENAME", "FROM", "TO", "INHERITS", "PROPERTIES", "USEDBY", "LANGUAGEDATA", 
		"LABEL", "REVERSELABEL", "IDIOMA", "CONTEXT", "ABRE_LLAVE", "CIERRA_LLAVE", 
		"ABRE_CORCHETE", "CIERRA_CORCHETE", "COMA", "DOSPUNTOS", "BOOLEAN", "CADENA", 
		"WS", "INTRO", "CIERRA_CONTEXTO", "INFO_CONTEXT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GjsonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GjsonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ArchivoContext extends ParserRuleContext {
		public TerminalNode ABRE_LLAVE() { return getToken(GjsonParser.ABRE_LLAVE, 0); }
		public ContextContext context() {
			return getRuleContext(ContextContext.class,0);
		}
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public TerminalNode CIERRA_LLAVE() { return getToken(GjsonParser.CIERRA_LLAVE, 0); }
		public ArchivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_archivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterArchivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitArchivo(this);
		}
	}

	public final ArchivoContext archivo() throws RecognitionException {
		ArchivoContext _localctx = new ArchivoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_archivo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(ABRE_LLAVE);
			setState(65);
			context();
			setState(66);
			lista();
			setState(67);
			match(CIERRA_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextContext extends ParserRuleContext {
		public TerminalNode CONTEXT() { return getToken(GjsonParser.CONTEXT, 0); }
		public TerminalNode CIERRA_CONTEXTO() { return getToken(GjsonParser.CIERRA_CONTEXTO, 0); }
		public ContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_context; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitContext(this);
		}
	}

	public final ContextContext context() throws RecognitionException {
		ContextContext _localctx = new ContextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_context);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(CONTEXT);
			setState(70);
			match(CIERRA_CONTEXTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrafoContext extends ParserRuleContext {
		public TerminalNode ABRE_LLAVE() { return getToken(GjsonParser.ABRE_LLAVE, 0); }
		public Nombre_grafoContext nombre_grafo() {
			return getRuleContext(Nombre_grafoContext.class,0);
		}
		public Cuerpo_grafoContext cuerpo_grafo() {
			return getRuleContext(Cuerpo_grafoContext.class,0);
		}
		public TerminalNode CIERRA_LLAVE() { return getToken(GjsonParser.CIERRA_LLAVE, 0); }
		public GrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterGrafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitGrafo(this);
		}
	}

	public final GrafoContext grafo() throws RecognitionException {
		GrafoContext _localctx = new GrafoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_grafo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(ABRE_LLAVE);
			setState(73);
			nombre_grafo();
			setState(74);
			cuerpo_grafo();
			setState(75);
			match(CIERRA_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cuerpo_grafoContext extends ParserRuleContext {
		public TerminalNode ABRE_LLAVE() { return getToken(GjsonParser.ABRE_LLAVE, 0); }
		public Tipo_grafoContext tipo_grafo() {
			return getRuleContext(Tipo_grafoContext.class,0);
		}
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public TerminalNode CIERRA_LLAVE() { return getToken(GjsonParser.CIERRA_LLAVE, 0); }
		public Cuerpo_grafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo_grafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterCuerpo_grafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitCuerpo_grafo(this);
		}
	}

	public final Cuerpo_grafoContext cuerpo_grafo() throws RecognitionException {
		Cuerpo_grafoContext _localctx = new Cuerpo_grafoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cuerpo_grafo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(ABRE_LLAVE);
			setState(78);
			tipo_grafo();
			setState(79);
			lista();
			setState(80);
			match(CIERRA_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjetoContext extends ParserRuleContext {
		public TerminalNode ABRE_LLAVE() { return getToken(GjsonParser.ABRE_LLAVE, 0); }
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public TerminalNode CIERRA_LLAVE() { return getToken(GjsonParser.CIERRA_LLAVE, 0); }
		public List<TerminalNode> COMA() { return getTokens(GjsonParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(GjsonParser.COMA, i);
		}
		public List<AtributoContext> atributo() {
			return getRuleContexts(AtributoContext.class);
		}
		public AtributoContext atributo(int i) {
			return getRuleContext(AtributoContext.class,i);
		}
		public ObjetoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objeto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterObjeto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitObjeto(this);
		}
	}

	public final ObjetoContext objeto() throws RecognitionException {
		ObjetoContext _localctx = new ObjetoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_objeto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(ABRE_LLAVE);
			setState(83);
			identificador();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(84);
				match(COMA);
				setState(85);
				atributo();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(CIERRA_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaContext extends ParserRuleContext {
		public TerminalNode ABRE_CORCHETE() { return getToken(GjsonParser.ABRE_CORCHETE, 0); }
		public TerminalNode CIERRA_CORCHETE() { return getToken(GjsonParser.CIERRA_CORCHETE, 0); }
		public List<GrafoContext> grafo() {
			return getRuleContexts(GrafoContext.class);
		}
		public GrafoContext grafo(int i) {
			return getRuleContext(GrafoContext.class,i);
		}
		public List<ObjetoContext> objeto() {
			return getRuleContexts(ObjetoContext.class);
		}
		public ObjetoContext objeto(int i) {
			return getRuleContext(ObjetoContext.class,i);
		}
		public List<CadenaUsedByContext> cadenaUsedBy() {
			return getRuleContexts(CadenaUsedByContext.class);
		}
		public CadenaUsedByContext cadenaUsedBy(int i) {
			return getRuleContext(CadenaUsedByContext.class,i);
		}
		public List<TerminalNode> CADENA() { return getTokens(GjsonParser.CADENA); }
		public TerminalNode CADENA(int i) {
			return getToken(GjsonParser.CADENA, i);
		}
		public List<TerminalNode> COMA() { return getTokens(GjsonParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(GjsonParser.COMA, i);
		}
		public ListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterLista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitLista(this);
		}
	}

	public final ListaContext lista() throws RecognitionException {
		ListaContext _localctx = new ListaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(ABRE_CORCHETE);
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(94);
				grafo();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(95);
					match(COMA);
					setState(96);
					grafo();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(102);
				objeto();
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(103);
					match(COMA);
					setState(104);
					objeto();
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				{
				setState(110);
				cadenaUsedBy();
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(111);
					match(COMA);
					setState(112);
					cadenaUsedBy();
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 4:
				{
				setState(118);
				match(CADENA);
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(119);
					match(COMA);
					setState(120);
					match(CADENA);
					}
					}
					setState(125);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(128);
			match(CIERRA_CORCHETE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentificadorContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(GjsonParser.IDENTIFICADOR, 0); }
		public TerminalNode CADENA() { return getToken(GjsonParser.CADENA, 0); }
		public IdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitIdentificador(this);
		}
	}

	public final IdentificadorContext identificador() throws RecognitionException {
		IdentificadorContext _localctx = new IdentificadorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_identificador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(IDENTIFICADOR);
			setState(131);
			match(CADENA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributoContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ReversenameContext reversename() {
			return getRuleContext(ReversenameContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public ReverselabelContext reverselabel() {
			return getRuleContext(ReverselabelContext.class,0);
		}
		public GenderContext gender() {
			return getRuleContext(GenderContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public WordtypeContext wordtype() {
			return getRuleContext(WordtypeContext.class,0);
		}
		public TypeofContext typeof() {
			return getRuleContext(TypeofContext.class,0);
		}
		public IslistContext islist() {
			return getRuleContext(IslistContext.class,0);
		}
		public MultiplicitymaxContext multiplicitymax() {
			return getRuleContext(MultiplicitymaxContext.class,0);
		}
		public MultiplicityminContext multiplicitymin() {
			return getRuleContext(MultiplicityminContext.class,0);
		}
		public UsedbyContext usedby() {
			return getRuleContext(UsedbyContext.class,0);
		}
		public LanguagedataContext languagedata() {
			return getRuleContext(LanguagedataContext.class,0);
		}
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public ToContext to() {
			return getRuleContext(ToContext.class,0);
		}
		public InheritsContext inherits() {
			return getRuleContext(InheritsContext.class,0);
		}
		public PropertiesContext properties() {
			return getRuleContext(PropertiesContext.class,0);
		}
		public OptionalContext optional() {
			return getRuleContext(OptionalContext.class,0);
		}
		public AtributoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterAtributo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitAtributo(this);
		}
	}

	public final AtributoContext atributo() throws RecognitionException {
		AtributoContext _localctx = new AtributoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atributo);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CIERRA_LLAVE:
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				name();
				}
				break;
			case REVERSENAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				reversename();
				}
				break;
			case LABEL:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				label();
				}
				break;
			case REVERSELABEL:
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				reverselabel();
				}
				break;
			case GENDER:
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				gender();
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 7);
				{
				setState(139);
				number();
				}
				break;
			case WORDTYPE:
				enterOuterAlt(_localctx, 8);
				{
				setState(140);
				wordtype();
				}
				break;
			case TYPEOF:
				enterOuterAlt(_localctx, 9);
				{
				setState(141);
				typeof();
				}
				break;
			case ISLIST:
				enterOuterAlt(_localctx, 10);
				{
				setState(142);
				islist();
				}
				break;
			case MULTIPLICITYMAX:
				enterOuterAlt(_localctx, 11);
				{
				setState(143);
				multiplicitymax();
				}
				break;
			case MULTIPLICITYMIN:
				enterOuterAlt(_localctx, 12);
				{
				setState(144);
				multiplicitymin();
				}
				break;
			case USEDBY:
				enterOuterAlt(_localctx, 13);
				{
				setState(145);
				usedby();
				}
				break;
			case LANGUAGEDATA:
				enterOuterAlt(_localctx, 14);
				{
				setState(146);
				languagedata();
				}
				break;
			case FROM:
				enterOuterAlt(_localctx, 15);
				{
				setState(147);
				from();
				}
				break;
			case TO:
				enterOuterAlt(_localctx, 16);
				{
				setState(148);
				to();
				}
				break;
			case INHERITS:
				enterOuterAlt(_localctx, 17);
				{
				setState(149);
				inherits();
				}
				break;
			case PROPERTIES:
				enterOuterAlt(_localctx, 18);
				{
				setState(150);
				properties();
				}
				break;
			case OPTIONAL:
				enterOuterAlt(_localctx, 19);
				{
				setState(151);
				optional();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GjsonParser.NAME, 0); }
		public TerminalNode CADENA() { return getToken(GjsonParser.CADENA, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(NAME);
			setState(155);
			match(CADENA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReversenameContext extends ParserRuleContext {
		public TerminalNode REVERSENAME() { return getToken(GjsonParser.REVERSENAME, 0); }
		public TerminalNode CADENA() { return getToken(GjsonParser.CADENA, 0); }
		public ReversenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reversename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterReversename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitReversename(this);
		}
	}

	public final ReversenameContext reversename() throws RecognitionException {
		ReversenameContext _localctx = new ReversenameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_reversename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(REVERSENAME);
			setState(158);
			match(CADENA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(GjsonParser.LABEL, 0); }
		public TerminalNode ABRE_LLAVE() { return getToken(GjsonParser.ABRE_LLAVE, 0); }
		public List<IdiomaContext> idioma() {
			return getRuleContexts(IdiomaContext.class);
		}
		public IdiomaContext idioma(int i) {
			return getRuleContext(IdiomaContext.class,i);
		}
		public TerminalNode CIERRA_LLAVE() { return getToken(GjsonParser.CIERRA_LLAVE, 0); }
		public List<TerminalNode> COMA() { return getTokens(GjsonParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(GjsonParser.COMA, i);
		}
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitLabel(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(LABEL);
			setState(161);
			match(ABRE_LLAVE);
			setState(162);
			idioma();
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(163);
				match(COMA);
				setState(164);
				idioma();
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(170);
			match(CIERRA_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReverselabelContext extends ParserRuleContext {
		public TerminalNode REVERSELABEL() { return getToken(GjsonParser.REVERSELABEL, 0); }
		public TerminalNode ABRE_LLAVE() { return getToken(GjsonParser.ABRE_LLAVE, 0); }
		public List<RevidiomaContext> revidioma() {
			return getRuleContexts(RevidiomaContext.class);
		}
		public RevidiomaContext revidioma(int i) {
			return getRuleContext(RevidiomaContext.class,i);
		}
		public TerminalNode CIERRA_LLAVE() { return getToken(GjsonParser.CIERRA_LLAVE, 0); }
		public List<TerminalNode> COMA() { return getTokens(GjsonParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(GjsonParser.COMA, i);
		}
		public ReverselabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reverselabel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterReverselabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitReverselabel(this);
		}
	}

	public final ReverselabelContext reverselabel() throws RecognitionException {
		ReverselabelContext _localctx = new ReverselabelContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_reverselabel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(REVERSELABEL);
			setState(173);
			match(ABRE_LLAVE);
			setState(174);
			revidioma();
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(175);
				match(COMA);
				setState(176);
				revidioma();
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			match(CIERRA_LLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenderContext extends ParserRuleContext {
		public TerminalNode GENDER() { return getToken(GjsonParser.GENDER, 0); }
		public TerminalNode CADENA() { return getToken(GjsonParser.CADENA, 0); }
		public GenderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gender; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).enterGender(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GjsonParserListener ) ((GjsonParserListener)listener).exitGender(this);
		}
	}

	public final GenderContext gender() throws RecognitionException {
		GenderContext _localctx = new GenderContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_gender);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(GENDER);
			setState(185);
			match(CADENA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
